# PyAgartha

./: README  README.md  api.py  app.py  middleware.py  pyproject.toml  request.py  response.py  sessions.py  static_serve.py  templating.py
PyAgartha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
example/todolist/: app.py
example/todolist/static/: app.css
example/todolist/templates/: 500.html  index.html
src/PyAgartha/: api.py  autoserve.py  middleware.py  request.py  static_serve.py
src/PyAgartha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: 404.html  index.html
