[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyAgartha"
version = "0.0.1"
authors = [
  { name="Hasnat4763", email="contact@hasnat4763.me" },
]
description = "A lightweight web framework for python inspired from Flask"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "parse",
    "webob",
    "Jinja2",
    "waitress",
]

[project.urls]
Homepage = "https://github.com/Hasnat4763/PyAgartha"
Issues = "https://github.com/Hasnat4763/PyAgartha/issues"


[tool.setuptools.packages.find]
where = ["."]